apply plugin: 'scala'

sourceCompatibility = 1.6
targetCompatibility = 1.6

repositories {
  mavenCentral()
  maven {
    url "https://oss.sonatype.org/content/repositories/releases/"
  }
  maven {
    url "https://oss.sonatype.org/content/repositories/snapshots/"
  }
  maven {
    url "http://repo.spray.io/"
  }
}

ext {
  scalaVersion = '2.11'
  scalaVersionRevision = '0'
  akkaVersion = '2.3.2'
  sprayVersion = '1.3.1-20140423'
  amqpVersion = '1.4'
  specs2Version = '2.3.11'
  mockitoVersion = '1.9.5'
}

configurations {
  scalaLibrary
  scalaCompiler
}

dependencies {
  scalaLibrary "org.scala-lang:scala-library:$scalaVersion.$scalaVersionRevision"
  scalaCompiler "org.scala-lang:scala-compiler:$scalaVersion.$scalaVersionRevision"

  compile "org.scala-lang:scala-library:$scalaVersion.$scalaVersionRevision"
  compile "com.typesafe.akka:akka-osgi_$scalaVersion:$akkaVersion"
  compile "io.spray:spray-can_$scalaVersion:$sprayVersion"
  compile "com.github.sstone:amqp-client_$scalaVersion:$amqpVersion"

  compile project(':common')
  testCompile project(':common').sourceSets.test.output

  testCompile "junit:junit:$junitVersion"
  testCompile "org.mockito:mockito-core:$mockitoVersion"
  testCompile "org.specs2:specs2_$scalaVersion:$specs2Version"
  testCompile "com.typesafe.akka:akka-testkit_$scalaVersion:$akkaVersion"
}

tasks.withType(ScalaCompile) {
  scalaCompileOptions.useCompileDaemon = false
  scalaCompileOptions.useAnt = false

  configure(scalaCompileOptions.forkOptions) {
    memoryMaximumSize = '1g'
    jvmArgs = ['-XX:MaxPermSize=512m']
  }
}